--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8" />
-    <title>Assignment-Two</title>
+    <title>CSS Tabs Example</title>
     <!--[if lt IE 9]>
             <script src="js/html5shiv.js"></script>
         <![endif]-->
