--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" type="text/css" href="css/reset.css">
     <link rel="stylesheet" type="text/css" href="css/styles.css">
     <link rel="stylesheet" type="text/css" href="css/tabs.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Electrolize">
 </head>
 
 <body class="clearfix">
